# z64lib

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/: publish-to-pypi.yaml
.github/workflows/: publish-to-pypi.yaml
tests/: helpers.py  test.py  test_ultratypes.py
z64lib/: __init__.py
z64lib/audio/: __init__.py
z64lib/audio/audiobank/: __init__.py  _audiobank.py  _audiobank_index.py  _audiobank_index_entry.py  audiobank.py  audiobank_index.py  audiobank_index_entry.py
z64lib/audio/audiobank/bank/: _instrument_bank.py
z64lib/audio/audiobank/bank/structs/: __init__.py  _drum_struct.py  _envelope_struct.py  _instrument_struct.py  _sample_struct.py  _tuned_sample_struct.py  _vadpcm_loop_struct.py
z64lib/audio/audiobank/banks/: __init__.py  _instrument_bank.py  instrument_bank.py
z64lib/audio/audiobank/banks/structures/: __init__.py  _drum_struct.py  _envelope_struct.py  _instrument_struct.py  _vadpcm_book_struct.py  _vadpcm_loop_struct.py  drum_struct.py  envelope_struct.py  instrument_struct.py  sample_struct.py  tuned_sample_struct.py  vadpcm_book_struct.py  vadpcm_loop_struct.py
z64lib/audio/audiobank/enums/: __init__.py  adsr_opcode.py  audio_cache_load_type.py  vadpcm_loop_count.py
z64lib/audio/audiotable/: __init__.py  _audiotable_index_entry.py
z64lib/audio/enums/: __init__.py  _sound_output_mode.py  _sound_setting.py  adsr_status.py  audio_cache_load_type.py  audio_load_status.py  audio_sample_codec.py  audio_storage_medium.py  audiotable_type.py
z64lib/audiobank/: __init__.py  _audiobank.py  _audiobank_index.py  _audiobank_index_entry.py  _instrument_bank.py
z64lib/audiobank/bank/: _instrument_bank.py
z64lib/audiobank/bank/structs/: __init__.py  _drum_struct.py  _envelope_struct.py  _instrument_struct.py  _sample_struct.py  _sound_effect_struct.py  _tuned_sample_struct.py  _vadpcm_book_struct.py  _vadpcm_loop_struct.py
z64lib/audiobank/structs/: __init__.py  _drum_struct.py  _envelope_struct.py  _instrument_struct.py  _sample_struct.py  _sound_effect_struct.py  _tuned_sample_struct.py  _vadpcm_book_struct.py  _vadpcm_loop_struct.py
z64lib/audioseq/: __init__.py  args.py  parser.py  sequence.py
z64lib/audioseq/messages/: __init__.py  _channel.py  _control_flow.py  _message_spec.py  _meta.py  _note_layer.py
z64lib/audiotable/: __init__.py  _audiotable_index_entry.py
z64lib/core/: __init__.py  _accessors.py  _internals.py  alignment.py  allocation.py  enums.py  exceptions.py  memory_stream.py  types.py
z64lib/core/audio/: __init__.py  _structs.py  _structures.py
z64lib/core/enums/: __init__.py  _adsr_opcode.py  _aseq_opcode.py  _aseq_sections.py  _aseq_version.py  _audio_cache_type.py  _audio_manager_debug_level.py  _named_int_enum.py  _vadpcm_loop_count.py  _versioned_int_enum.py
z64lib/core/helpers/: __init__.py  _class_helpers.py  _enum_helpers.py  _type_helpers.py  bit_helpers.py  class_helpers.py  enum_helpers.py
z64lib/types/: __init__.py  _accessors.py  _internals.py  aliases.py  base.py  composites.py  markers.py  primitives.py  references.py
z64lib/types/composites/: __init__.py  _array.py  _bitfield.py  _dyna_struct.py  _union.py  _z64_struct.py
z64lib/types/nstd/: __init__.py  _int24_t.py  _uint24_t.py
z64lib/types/std/: __init__.py  _double.py  _float.py  _int16_t.py  _int32_t.py  _int64_t.py  _int8_t.py  _uint16_t.py  _uint32_t.py  _uint64_t.py  _uint8_t.py
z64lib/ultratypes/: __init__.py  aliases.py  base.py  primitives.py  references.py
z64lib/ultratypes/composites/: __init__.py  _array.py  _bitfield.py  _structure.py  _union.py
